--- a/package.json
+++ b/package.json
@@ -1,22 +1,11 @@
 {
-  "name": "crowdpointnfts-smartcontract",
+  "name": "ArtDecoNFTs-SmartContract",
   "version": "1.0.0",
-  "description": "CrowdPoint NFT SmartContract",
   "main": "truffle-config.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CrowdPointNFTs/CrowdPointNFTs-SmartContract.git"
-  },
-  "author": "LemonCryptoDev",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/CrowdPointNFTs/CrowdPointNFTs-SmartContract/issues"
-  },
-  "homepage": "https://github.com/CrowdPointNFTs/CrowdPointNFTs-SmartContract#readme",
+  "repository": "https://github.com/ArtDecoNFTs/ArtDecoNFTs-SmartContract.git",
+  "author": "Literally Collective <51626000+lemoncrypto@users.noreply.github.com>",
+  "license": "MIT",
   "dependencies": {
-    "openzeppelin-solidity": "3.4.1"
+    "openzeppelin-solidity": "^4.1.0"
   }
 }
